--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <em><strong>Electrical Engineering</strong> at
             <a href="https://nit.ac.ir">NIT University</a><br>
             Senior Python Developer<br>
-            Senior Blockزhain Developer<br>
+            Senior Blockchain Developer<br>
             Senior Web Developer</em><br>
             </p>
         </td>
